--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -21,10 +21,12 @@
 			</label>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchOffshelf">批量下架</a>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">彻底删除</a>
+			{% if not mall_type %}
 			<a href="/mall2/product/" class="btn btn-success xui-addProductBtn ml10 xa-addProduct fr">
 				<span style="padding-right:5px;"><img src="/static_v2/img/editor/plusOpcity.png"></span>
 				添加新商品
 			</a>
+			{% endif %}
 		</div>
 		<div
 		data-ui-role="products-advanced-table"
