--- a/weapp/static_v2/js/view/apps_prize_selector_v5/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v5/template.html
@@ -23,14 +23,13 @@
 
 <script id="apps-prize-selector-v5-tmpl" type="text/x-handlebar-tmpl">
 <div class="xui-apps-prizeSelector" style="margin-top: 2px;">
-	<div class="coupon_div xa-selectCoupon {{#if prizes}}xui-hide{{/if}}" data-target="coupon">
+	<span class="coupon_div xa-selectCoupon {{#if prizes}}xui-hide{{/if}}" data-target="coupon">
 		<a
 			href="javascript:void(0);"
 			class="ml5"
 		>请选择优惠券	</a>
-		<input style="width:0;background:#F9F9F9;border:0" type="text" />
 		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
-	</div>
+	</span>
 	{{#each prizes}}
 	<div class="xui-inline xa-selectedCoupon xa-optionTarget">
 		<div class="pr xui-i-selectedBox" style="margin-left:0;">
@@ -54,12 +53,11 @@
 	<div class="errorHint" style="margin-left: 37%;"></div>
 
 </div>
-<div class="addcoupon_div xa-addselectCoupon {{#unless  prizes}}xui-hide{{/unless}}" data-target="coupon">
+<span class="addcoupon_div xa-addselectCoupon {{#unless  prizes}}xui-hide{{/unless}}" data-target="coupon">
 		<a
 			href="javascript:void(0);"
 			class="ml5"
 		>+添加优惠券</a>
-		<input style="width:0;background:#F9F9F9;border:0" type="text" />
 		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
-	</div>
+	</span>
 </script>
