增大输入框高度

--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
@@ -42,9 +42,9 @@
     .wui-exlottery-container input{
         border: 1px solid #dbdbdb;
         box-sizing: border-box;
-        font-size: .9rem;
-        height: 1.9rem;
-        line-height: 1.9rem;
+        font-size: 1rem;
+        height: 2.4rem;
+        line-height: 2.4rem;
         border-radius: .2rem;
         width: 100%;
         outline: none;
@@ -52,12 +52,12 @@
         font-family: "黑体";
     }
     .wui-exlottery-container .wui-verify-input{
-        width: 69%;
+        width: 67%;
         margin-right: 3%;
     }
     .wui-verify-container{
-        width: 28%;
-        height: 1.9rem;
+        width: 30%;
+        height: 2.4rem;
         display: inline-block;
         vertical-align: top;
     }
