调整幸运码抽奖页面样式

--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -2,7 +2,7 @@
 
 
 {% ifequal component.type 'appkit.exlotterydescription' %}
-    <div class="wui-surveyDescription wui-lotterydescription xa-exlotterydescription" {% if component.model.exlottery_bg_image %}style="background-image: url({{ component.model.exlottery_bg_image }})"{% endif %}>
+    <div class="wui-surveyDescription wui-lotterydescription xa-exlotterydescription wui-exlotterydescription" {% if component.model.exlottery_bg_image %}style="background-image: url({{ component.model.exlottery_bg_image }})"{% endif %}>
         <div class="wui-i-roulette wui-i-title wui-i-nobg">
             <h1 class="wui-i-innerTitle"></h1>
         </div>
