--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -349,6 +349,9 @@
 	padding-top: 0;
 	margin-top: -40px;
 }
+.wui-exlotterydescription{
+	padding-bottom: 105px;
+}
 .wui-lotterydescription>.wui-i-title{
 	background: url("/termite_static/img/component/lottery/roulette_title.png") no-repeat scroll center center / 275px 140px rgba(0, 0, 0, 0);
     height: 140px;
