--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -478,9 +478,9 @@
 					{% else %}
 					{% if request.GET.source == 'onshelf' %}
 					<input type="button" onclick="history.go(-1)" class="btn btn-primary mr40 xa-weshop" value="返回" />
-					{% else %}
+					<!-- {% else %}
 					<input type="button" class="btn btn-primary mr40 xa-check xa-weshop" value="审核上架" />
-					{% endif %}
+					{% endif %} -->
 					{% endif %}
 					<!--
 					<input type="button" class="btn btn-success" value="预览" />
