--- a/weapp/weixin2/templates/weixin/message/new_template_messages.html
+++ b/weapp/weixin2/templates/weixin/message/new_template_messages.html
@@ -1,4 +1,98 @@
 {% extends "content_base_v2.html" %}
+{% block css%}
+<style type="text/css">
+    .xui-background{
+        position: relative;
+        min-height: 531px;
+    }
+    .template_message_item{
+        border-bottom: 1px solid #e6e6e6;
+        width: 580px;
+        color: #666666;
+        height: 40px;
+        line-height: 40px;
+    }
+    input.template_control{
+        display: inline-block;
+        vertical-align: middle;
+        width: 15px;
+        height: 15px;
+        background-color: #ffffff;
+        margin: 0;
+        margin-right: 10px;
+    }
+    .template_edit{
+        margin-left: 210px;
+    }
+    .template_edit_container{
+        position: absolute;
+        background: #ebebeb;
+        right: 15px;
+        top: 15px;
+        border: 1px solid #e5e5e5;
+    }
+    .template_edit_panel{
+        display: none;
+        width: 322px;
+        background: url(/static_v2/img/editor/weixin_bg.png) top no-repeat;
+        padding: 70px 15px 15px;
+    }
+    .template_edit_content{
+        width: 100%;
+        height: 100%;
+        background: #ffffff;
+        border: 2px solid #dfdfdf;
+        border-radius: 5px;
+        padding: 20px 10px 0;
+    }
+    .template_edit_content h2{
+        margin: 0;
+        font-size: 15px;
+        font-weight: bold;
+    }
+    .template_edit_panel input{
+        width: 100%;
+        height: 28px;
+        line-height: 28px;
+        padding-left: 6px;
+        color: #666666;
+    }
+    .template_edit_detail{
+        border-top: #f5f5f5 solid 1px;
+        margin-top: 20px;
+        height: 35px;
+        line-height: 35px;
+        color: #666666;
+        overflow: hidden;
+    }
+    .template_edit_detail i{
+        display: inline-block;
+        float: right;
+        font-family: "黑体";
+        font-weight: bold;
+        font-size: 16px;
+        font-style: normal;
+    }
+    .edit_item span{
+        color: #1c69bb;
+    }
+    .template_commit{
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        width: 100%;
+        height: 60px;
+        line-height: 60px;
+        background: rgba(0,0,0,0.2);
+    }
+    .template_commit button{
+        width: 100px;
+    }
+    .cl6{
+        color: #666666;
+    }
+</style>
+{% endblock %}
 {% block content-panel %}
 <div class="xui-weixin-template_messagesPage">
     <div class="relative">
@@ -13,86 +107,104 @@
         <button type="button" class="btn btn-primary xa-sync-template">更新模版</button>
     </div>
     <div class="xui-background">
+        <div class="template_edit_container">
+            <div class="template_edit_panel"></div>
+        </div>
         {% if has_templates %}
             <div class="panel-body"></div>
         {% else %}
             <div>暂没有配置模版消息</div>
         {% endif %}
+        <div class="template_commit">
+            <button class="btn btn-primary xa-submit">保&nbsp;&nbsp;&nbsp;&nbsp;存</button>
+        </div>
     </div>
-
-
 </div>
 {% endblock %}
 
 {% block js %}
 {% verbatim %}
-<script id="weixin-template-message-view" type="text/x-jquery-tmpl">
-<table class="table table-condensed mb0 xui-tableHead">
-		<thead>
-			<tr>
-				<th class="tl" width="385"><span style="padding-left:100px">标题</span></th>
-				<th width="140">行业</th>
-				<th width="180">状态</th>
-				<th width="290">操作</th>
-			</tr>
-		</thead>
-        <tbody id = "template_message_list">
-			{{if items.length}}
-	            {{each(i, tmpl) items}}
-	                {{if tmpl.title in using_templates}}
-                        <tr data-template-id="${tmpl.template_id}">
-                            <td class="tl" style="padding-left:100px">
-                                <div>
-                                    ${tmpl.title}
-                                </div>
-                            </td>
-                            <td>
-                                <div class="centerAlign">
-                                ${tmpl.industry_name}
-                                </div>
-                            </td>
-                            <td>
-                                <div class="centerAlign current-status" data-id="${tmpl.template_detail_id}" >
-                                    {{if tmpl.status == '1'}}
-                                        启用
-                                    {{else}}
-                                        未启用
-                                    {{/if}}
-                                </div>
-                            </td>
-                            <td class="tc">
-                                <a class="n-success mt10 w50 mr10"  status="1" value = ${tmpl.template_detail_id} href="/new_weixin/template_messages_detail?template_detail_id=${tmpl.template_detail_id}">编　辑</a>
-                                {{if tmpl.status}}
-                                   <a class="btn btn-danger mt10 w50 mr10 xa-update-status"  status="1" value = ${tmpl.template_detail_id} >停　用</a>
-                                {{else}}
-                                    <a class="btn btn-success mt10 w50 mr10  xa-update-status" status="0"  value = ${tmpl.template_detail_id} >启　用</a>
-                                {{/if}}
-                            </td>
-                        </tr>
-                    {{/if}}
-				{{/each}}
-			{{/if}}
-		</tbody>
-</table>
-
+<script id="weixin-template-message-view" type="text/x-handlebar-tmpl">
+    <div id = "template_message_list">
+        {{#if items.length}}
+            {{#each items}}
+                {{#if title}}
+                    <div class="template_message_item">
+                        <input type="checkbox" name="control" class="template_control" {{#if status}}checked{{/if}} data-template-id="{{template_id}}" data-status = "{{status}}">
+                        <span>{{title}}（行业：{{industry_name}}，模板库编号：TM00398）</span>
+                        <a href="javascript:void(0)" class="template_edit" title="编辑" data-template-id="{{template_id}}">编辑</a>
+                    </div>
+                {{/if}}
+            {{/each}}
+        {{/if}}
+    </div>
 </script>
 
+<script id="weixin-template-edit-view" type="text/x-handlebar-tmpl">
+    <div class="template_edit_content" data-template-id="{{template_id}}">
+        <h2>{{item_title}}</h2>
+        <div class="cl6 mt5 mb5">7月11日</div>
+        <input type="text" name="first" class="template_edit_first mb10" value={{#if item_first}}"{{item_first}}"{{/if}}></input>
+        {{#each item_message_arr}}
+        <p class="template_edit_name mb5 edit_item">{{this}}</p>
+        {{/each}}
+        <input type="text" name="remark" class="mt5 template_edit_remark" value={{#if item_remark}}"{{item_remark}}"{{/if}}></input>   
+        <div class="template_edit_detail">
+            详情<i>></i>
+        </div>           
+    </div>
+</script>
 {% endverbatim %}
 
 <script type="text/javascript">
 var using_templates = [];
 $(document).ready(function() {
     //获取模版消息
-    W.resource.new_weixin.NewTemplateMessages.get({
-        data: {},
-        success: function(data){
-            console.log(data);
-            //TODO 渲染模版
-        },
-        error: function(){
-            W.showHint('error', '获取模版消息失败，清重试！');
-        }
-    });
+    // W.resource.new_weixin.NewTemplateMessages.get({
+    //     data: {},
+    //     success: function(data){
+    //         console.log(data);
+    //         //TODO 渲染模版
+    //     },
+    //     error: function(){
+    //         W.showHint('error', '获取模版消息失败，清重试！');
+    //     }
+    // });
+    var items = [{
+        'status': true,
+        'first': '',
+        'remark': '',
+        'industry_name': "IT科技",
+        'title': "领取奖金提醒1",
+        'template_id': "13215465",
+        'example': "您已提交领奖申请\n\n领奖金额：xxxx元\n领奖时间：2013-10-10 12:22:22\n银行信息：xx银行(尾号xxxx)\n到账时间：预计xxxxxxx\n\n预计将于xxxx到达您的银行卡"
+    },{
+        'status': false,
+        'first': '',
+        'remark': '',
+        'industry_name': "IT科技",
+        'title': "领取奖金提醒2",
+        'template_id': "23215465",
+        'example': "您已提交领奖申请\n\n领奖金额：xxxx元\n领奖时间：2013-10-10 12:22:22\n银行信息：xx银行(尾号xxxx)\n到账时间：预计xxxxxxx\n\n预计将于xxxx到达您的银行卡"
+    },{
+        'status': false,
+        'first': '',
+        'remark': '',
+        'industry_name': "IT科技",
+        'title': "领取奖金提醒3",
+        'template_id': "43215465",
+        'example': "您已提交领奖申请\n\n领奖金额：xxxx元\n领奖时间：2013-10-10 12:22:22\n银行信息：xx银行(尾号xxxx)\n到账时间：预计xxxxxxx\n\n预计将于xxxx到达您的银行卡"
+    }];
+
+    var context = {
+        items: items,
+        using_templates: using_templates
+    };
+    var source = $('#weixin-template-message-view').html();
+    var template = Handlebars.compile(source);  
+    var html = template(context);
+    $('.panel-body').html(html);
+
     //同步模版
     $('.xa-sync-template').on('click', function(){
         W.resource.new_weixin.NewTemplateMessages.post({
@@ -105,6 +217,72 @@ $(document).ready(function() {
                 W.showHint('error', resp.errMsg);
             }
         });
+    });
+
+    //编辑
+    $('body').delegate('.template_edit','click',function(){
+        if($('.template_edit_content').length != 0){
+            var template_id = $('.template_edit_content').attr('data-template-id');
+            var cur_first = $('.template_edit_content').find('.template_edit_first').val();
+            var cur_remark = $('.template_edit_content').find('.template_edit_remark').val();
+            for(var i=0;i<items.length;i++){
+                if(items[i]['template_id'] == template_id){
+                    items[i].first = cur_first;
+                    items[i].remark = cur_remark;
+                }
+            }
+        }
+        var template_id = $(this).attr('data-template-id');
+        var item = items.filter(function(e){
+            return e['template_id'] == template_id;
+        })[0];
+        var item_message_arr = item.example.split('\n\n')[1].split('\n');
+        var context = {
+            item_title: item.title,
+            template_id: template_id,
+            item_first: item.first,
+            item_message_arr: item_message_arr,
+            item_remark: item.remark
+        };
+        var source = $('#weixin-template-edit-view').html();
+        var template = Handlebars.compile(source);  
+        var html = template(context);
+        $('.template_edit_panel').html(html).show();
+    });
+
+    $('body').delegate('.template_control','click',function(){
+        var template_id = $(this).attr('data-template-id');
+        if( $(this).attr('data-status') == 'true'){
+            $(this).attr('data-status','false');
+            for(var i=0;i<items.length;i++){
+                if(items[i]['template_id'] == template_id){;
+                    items[i]['status'] = 'false';
+                }
+            }          
+        }else{
+            $(this).attr('data-status','true'); 
+            for(var j=0;j<items.length;j++){
+                if(items[j]['template_id'] == template_id){
+                    items[j]['status'] = 'true';
+                }
+            }           
+        }
+    });
+
+    $('.template_commit').click(function(){
+        var template_id = $('.template_edit_content').attr('data-template-id');
+        var cur_first = $('.template_edit_content').find('.template_edit_first').val();
+        var cur_remark = $('.template_edit_content').find('.template_edit_remark').val();
+        for(var i=0;i<items.length;i++){
+            if(items[i]['template_id'] == template_id){
+                items[i].first = cur_first;
+                items[i].remark = cur_remark;
+            }
+        }
+
+        W.getApi().call({
+            //TODO
+        });        
     });
 });
 </script>
