--- a/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
@@ -6,6 +6,9 @@
         .Chr, p {
             font-family: STHeiti;
         }
+				.wui-description p,.wui-ExSignRules li{
+					font-family: "微软雅黑";
+				}
 
         .Chr.Num{
             font-family: Arial;
