--- a/weapp/apps/customerized_apps/exsign/templates/webapp/m_exsign.html
+++ b/weapp/apps/customerized_apps/exsign/templates/webapp/m_exsign.html
@@ -3,6 +3,9 @@
 {% block css %}
 <link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/emojilc6cc2.css">
 <style type="text/css">
+		html,body{
+			background: #fff !important;
+		}
     h1 {
         color: #00F;
     }
