--- a/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exsigndescription/exsigndescription.html
@@ -3,6 +3,9 @@
 {% ifequal component.type 'appkit.exsigndescription' %}
 
     <style>
+				html{
+					background-color: #fff !important;
+				}
         .Chr, p:not(.wui-description p){
             font-family: STHeiti;
         }
